[metadata]
name = python-multithreading
version = 0.0.1
author = Doru Irimescu
description = Python multithreading library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/doruirimescu/python-multithreading
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.6
